tests/NormalTests/paczka1/fuzzy1/95482624.err
Error in line 11: rhfsH6xg8R S46 13,8
Error in line 24: Gh2bhzuSO A728 263,60
Error in line 25: Gh2bhzuSO S46 29,08
Error in line 17: Gh2bhzuSO A728 84,3
Error in line 34: fUWdAfCNKE A728 19,2
